Added:added event listener to display the range in salary

--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -85,7 +85,7 @@
                 <label class="label text" for="salary">Choose your salary: </label>
                 <input class="input" type="range" name="salary" id="salary" min="300000"
                         max="500000" step="100" value="400000">
-                <output class="salary-output text" for="salary">400000</output>
+                <output class="salary-output" for="salary">400000</output>
             </div>
             <!--UC 5-->
             <div class="row-content">
