Added: added event listener when form is loaded

--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/payroll_form.css">
     <title>Employee payroll form</title>
     <script defer src="../js/payroll_form.js"></script>
+    <script defer src="../js/EmployeePayroll.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -29,6 +30,7 @@
                 <label class="label text" for="name">Name</label>
                 <input class="input" type="text" id="name" name="name"
                         placeholder="Your name.." required>
+                <error-output class="text-error" for="text"></error-output>
             </div>
             <!--UC 3-->
             <div class="row-content">
