--- a/pages/home_page.html
+++ b/pages/home_page.html
@@ -18,6 +18,14 @@
                 <span class="emp-text emp-payroll">PAYROLL</span>
             </div>
         </div>
-    </header>   
+    </header> 
+    <div class="main-content">
+        <div class="header-content">
+            <div class="emp-detail-text">
+                Employee Details <div class="emp-count">10</div>
+            </div>
+            <a href="..\pages\payroll_form.html" class="add-button">
+                <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
+        </div>  
 </body>
 </html>
