Added:viewing payroll details in tabular format using Template Literals

--- a/pages/home_page.html
+++ b/pages/home_page.html
@@ -24,37 +24,17 @@
             <div class="emp-detail-text">
                 Employee Details <div class="emp-count">10</div>
             </div>
-            <a href="..\pages\payroll_form.html" class="add-button">
+            <a href="../pages/payroll_form.html" class="add-button">
                 <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
         </div>
         <div class="table-main">
             <table id="table-display" class="table">
-                <tr>
-                    <th></th>
-                    <th>Name</th>
-                    <th>Gender</th>
-                    <th>Department</th>
-                    <th>Salary</th>
-                    <th>Start Date</th>
-                    <th>Actions</th>
-                </tr>
-                <tr>
-                    <td><img class="profile" alt="" src="../assets/profile-images/Ellipse -2.png"></td>
-                    <td>Saud Hasan</td>
-                    <td>Male</td>
-                    <td><div class="dept-label">HR</div>
-                        <div class="dept-label">Finance</div></td>
-                    <td>300000</td>
-                    <td>1 Nov 2020</td>
-                    <td>
-                        <img id="1" onclick="remove(this)" alt="delete"
-                            src="../assets/icons/delete-black-18dp.svg">
-                        <img id="1" alt="edit" onclick="update(this)"
-                        src="../assets/icons/create-black-18dp.svg">
-                    </td>
-                </tr>
             </table>
         </div><!-- table-main -->
-    </div><!-- main-content -->  
+    </div><!-- main-content --> 
+    <script src="../js/new_home.js"></script>
+    <script src="../js/utility.js"></script>
+    <script src="../js/site_properties.js"></script>
+    <script src="../js/EmployeePayroll.js"></script>
 </body>
 </html>
