--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -154,7 +154,7 @@
                 <textarea id="notes" class="input" name="Notes" placeholder="" style="height:100px"></textarea>
             </div>
             <div class="button-content">
-                <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
+                <a href="./home_page.html" class="resetButton button cancelButton">Cancel</a>
                 <div class="submit-reset">
                     <button type="submit" class="button submitButton" id="submitButton">Submit</button>
                     <button type="reset" class="resetButton button">Reset</button>
