--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -23,7 +23,7 @@
         </div>
     </header>
     <div  id="formId" class="form-content">
-        <form class="form" action="#" onreset="resetForm()" onsubmit="save()">
+        <form class="form" action="#" onreset="resetForm()" onsubmit="save(event)">
             <!--UC 2-->
             <div class="form-head"> Employee Payroll form </div>
             <div class="row-content">
@@ -92,7 +92,7 @@
             <!--UC 5-->
             <div class="row-content">
                 <label class="label text" for="startDate">Start Date</label>
-                <div>
+                <div id="date">
                     <select id="day" name="Day">
                         <option value="1">1</option>
                         <option value="2">2</option>
@@ -141,6 +141,7 @@
                         <option value="Dec">December</option>
                     </select>
                     <select id="year" name="Year">
+                        <option value="2021">2021</option>
                         <option value="2020">2020</option>
                         <option value="2019">2019</option>
                         <option value="2018">2018</option>
@@ -148,6 +149,7 @@
                         <option value="2016">2016</option>
                     </select>
                 </div>
+                <error-output class="date-error" for="startDate"></error-output>
             </div>
             <div class="row-content">
                 <label class="label text" for="notes">Notes</label>
