Added: Stage 2 - Retrieving data form JOSN server

--- a/pages/home_page.html
+++ b/pages/home_page.html
@@ -35,5 +35,6 @@
     <script src="../js/new_home.js"></script>
     <script src="../js/utility.js"></script>
     <script src="../js/site_properties.js"></script>
+    <script src="../js/serviceCall.js"></script>
 </body>
 </html>
