--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -9,6 +9,7 @@
     <title>Employee payroll form</title>
     <script defer src="../js/payroll_form.js"></script>
     <script defer src="../js/EmployeePayroll.js"></script>
+    <script defer src="../js/site_properties.js"></script>
     <title>Document</title>
 </head>
 <body>
