Added: Stage 3,4 - Adding and Updating employee Payroll to JSON

--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -10,6 +10,8 @@
     <script defer src="../js/payroll_form.js"></script>
     <script defer src="../js/EmployeePayroll.js"></script>
     <script defer src="../js/site_properties.js"></script>
+    <script defer src="../js/utility.js"></script>
+    <script defer src="../js/serviceCall.js"></script>
     <title>Document</title>
 </head>
 <body>
